Fixed cropping of rotated images

--- a/photogallery/static/css/style.css
+++ b/photogallery/static/css/style.css
@@ -144,8 +144,8 @@ body {
     width: 100%; 
     height: 100%;
     border: solid 10px rgba(0, 0, 0, 0);
-    border-radius: 5px;
 }
+
 .thumb {
     display: block;
     opacity: 0;
@@ -153,12 +153,13 @@ body {
     position: relative; 
     top: 50%; 
     left: 50%; 
+    transform-origin: top left;
     transform: translateY(-50%) translateX(-50%);
 }
 
 .thumb.loaded { opacity: 1; }
-.thumb.rotate_90 { transform: rotate(90deg); }
-.thumb.rotate_180 { transform: rotate(180deg); }
-.thumb.rotate_270 { transform: rotate(270deg); }
+.thumb.rotate_90 { transform: rotate(90deg) translateY(-50%) translateX(-50%); }
+.thumb.rotate_180 { transform: rotate(180deg) translateY(-50%) translateX(-50%); }
+.thumb.rotate_270 { transform: rotate(270deg) translateY(-50%) translateX(-50%); }
 .thumb.fill_width { width: 100%; }
 .thumb.fill_height { height: 100%; }
